# Soku-Convention-Boilerplate

./: .editorconfig  .gitignore  .gitleaks.toml  .gitmessage  .markdownlint.jsonc  AGENTS.md  BLUEPRINT.md  CICD_STANDARDS.md  CLOUD_POLICY.md  CODE_STYLE.md  CONTRIBUTING.md  GITHUB_STANDARDS.md  LICENSE  LICENSE_POLICY.md  PROJECT_STRUCTURE.md  README.ja.md  README.ko.md  README.md  README_GUIDE.md  RELEASE_AND_SYNC.md  SECURITY.md  SECURITY_POLICY.md  STACK_CONFIGS.md  STACK_EXAMPLES.md  VERIFICATION_GUIDE.md  docker-compose.verify.yml
.github/: CODEOWNERS  COMMENT_TEMPLATES.md  PULL_REQUEST_TEMPLATE.md  dependabot.test.mjs  dependabot.yml  deploy-gcp.test.mjs  github-governance-audit.test.mjs  governance-version  issue-form-order.test.mjs  labels.yml  usage-manual.test.mjs  validate-pr-governance.mjs  validate-pr-governance.test.mjs  validation-workflow.test.mjs
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  chore_task.md  chore_task.yml  config.yml  docs_update.md  docs_update.yml  feature_request.md  feature_request.yml  refactor_proposal.md  refactor_proposal.yml
.github/soku/: ci-cd-control-plane-v1.yml
.github/workflows/: ci.yml  connect-control-plane-provider.yml  contribution-title-check.yml  deploy-gcp.yml  pull-request-policy.yml  release.yml  security.yml  templates-ci.template.yml  templates-ci.yml  validation.yml
docs/audits/: github-governance-2026-07-23.md
docs/guides/: APPLICABILITY.md  CLOUD_RUN_CICD.md  INIT_GUIDE.md  LANGUAGE_SELECTION.md  README_GUIDE.md  STACK_CONFIGS.md  STACK_EXAMPLES.md  USAGE_MANUAL.md
docs/issues/: TASK_REPORT_TEMPLATE.md  issue-10-task-report.md  issue-100-task-report.md  issue-101-task-report.md  issue-102-task-report.md  issue-110-task-report.md  issue-114-task-report.md  issue-120-task-report.md  issue-14-task-report.md  issue-16-task-report.md  issue-17-task-report.md  issue-18-task-report.md  issue-19-task-report.md  issue-20-task-report.md  issue-21-task-report.md  issue-22-task-report.md  issue-23-task-report.md  issue-24-task-report.md  issue-35-task-report.md  issue-39-task-report.md  issue-40-task-report.md  issue-41-task-report.md  issue-44-task-report.md  issue-54-task-report.md  issue-55-task-report.md  issue-56-task-report.md  issue-69-task-report.md  issue-72-task-report.md  issue-78-task-report.md  issue-8-task-report.md  (+6 more)
scripts/: cd-deploy.sh  cd-plan.sh  ci-local.sh  contribution-title.mjs  contribution-title.test.mjs  create-release-tag.sh  gcp-bootstrap.sh  github-governance-audit.mjs  pull-request-policy.mjs  pull-request-policy.test.mjs  render-templates-ci.go  setup-git-signing.sh  sync-boilerplate.ps1  sync-boilerplate.sh  sync-labels.sh  verify-release-tag.sh  verify-release-tag_test.sh  verify-sync-parity.sh  verify.sh  verify.test.mjs
soku/: README.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  install_test.go  main.go
templates/python/: pyproject.toml  requirements-lock.txt
templates/python/src/: user_profile.py
templates/python/tests/: test_user_profile.py
verification/: CLASSIFICATION.md  tools.env
(+166 files in other folders)
