[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Starter project"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["black>=26.5.1,<27", "ruff", "mypy", "pytest"]

# Black enforces the 80-column Python template format. Ruff is used for linting
# only, so [tool.ruff.format] is intentionally absent.
[tool.black]
line-length = 80
target-version = ["py311"]

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests"]
exclude = ["build", "dist", ".venv", "__pycache__", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = false
exclude = ["node_modules/"]
